--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- Mirrored from senpalia.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 19 Apr 2024 17:58:12 GMT -->
 <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Sean Palia </title>
@@ -17,8 +17,8 @@
     <meta property="og:image" content="https://media.discordapp.net/attachments/1202690868822417449/1205395293449883658/imagem.png?ex=65d836d9&is=65c5c1d9&hm=83f46665ceb9e5fbcc367661b5f9cd83379ae8c37a34fc81f29681cde270ea4b&=&format=webp&quality=lossless">
     <meta property="og:description" content="Sean Palia  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="Seanpalia ">
-    <meta name="twitter:title" content="Seanpalia ">
+    <meta name="twitter:site" content="SeanPalia ">
+    <meta name="twitter:title" content="SeanPalia ">
     <meta name="twitter:type" content="website">
     <meta name="twitter:image" content="assets/img/twitter-image.png">
     <meta name="twitter:description" content="Sean Palia  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
@@ -79,7 +79,7 @@
                                         Sean Palia combines side-scrolling combat with base-building strategy in a beautiful pixel-art Viking Age world. You play as Thorald Olavson, a warrior hell-bent on tracking down the Jarl who burned down his home, stole his beloved, and fled to distant England.
                                     </p>
                                     <div class="slider__btn wow fadeInUp" data-wow-delay="1.2s">
-                                        <a href="https://mega.nz/file/IQRlULoZ#vaO0ALaZSZxOxwL2OXXlWrRRmoIEai0v8AAu9c5BB30" class="tg-btn-1" target="_blank">
+                                        <a href="https://www.mediafire.com/file/l9xhwlte648bu8b/SenPalia.rar/file" class="tg-btn-1" target="_blank">
                                             <span>Download Beta Launcher</span>
                                         </a>
                                          <span style="color: #cbf70b">RAR PASS: beta</span>
