--- a/index-2.html
+++ b/index-2.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Sean Palia </title>
-    <meta property="og:image" content="media.discordapp.net/attachments/1206548761522733057/1211647705529585684/Sem_Titulo-448d638d63.html?ex=65eef5dc&amp;is=65dc80dc&amp;hm=0656a3631fdf04ebf05e24ae9497d1fca1730f5e0693e22d32add47b55697e2d&amp;=&amp;format=webp&amp;quality=lossless">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1221830041240076400/1230978790834835456/sons-of-valhalla-release-date.png?ex=66354956&is=6622d456&hm=7304d3d998c46a46ed3caa47e678cee944e09cb2fc217c3a1f360e65bcc0faf1&=&format=webp&quality=lossless&width=1094&height=615">
 <meta name="description" content="Sean Palia  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.html">
@@ -17,8 +17,8 @@
     <meta property="og:image" content="https://media.discordapp.net/attachments/1202690868822417449/1205395293449883658/imagem.png?ex=65d836d9&is=65c5c1d9&hm=83f46665ceb9e5fbcc367661b5f9cd83379ae8c37a34fc81f29681cde270ea4b&=&format=webp&quality=lossless">
     <meta property="og:description" content="Sean Palia  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="Seanpalia ">
-    <meta name="twitter:title" content="Seanpalia ">
+    <meta name="twitter:site" content="SeanPalia ">
+    <meta name="twitter:title" content="SeanPalia ">
     <meta name="twitter:type" content="website">
     <meta name="twitter:image" content="assets/img/twitter-image.png">
     <meta name="twitter:description" content="Sean Palia  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
@@ -79,7 +79,7 @@
                                         Sean Palia combines side-scrolling combat with base-building strategy in a beautiful pixel-art Viking Age world. You play as Thorald Olavson, a warrior hell-bent on tracking down the Jarl who burned down his home, stole his beloved, and fled to distant England.
                                     </p>
                                     <div class="slider__btn wow fadeInUp" data-wow-delay="1.2s">
-                                        <a href="https://mega.nz/file/IQRlULoZ#vaO0ALaZSZxOxwL2OXXlWrRRmoIEai0v8AAu9c5BB30" class="tg-btn-1" target="_blank">
+                                        <a href="https://www.mediafire.com/file/l9xhwlte648bu8b/SenPalia.rar/file" class="tg-btn-1" target="_blank">
                                             <span>Download Beta Launcher</span>
                                         </a>
                                          <span style="color: #cbf70b">RAR PASS: beta</span>
