--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta property="og:image" content="https://media.discordapp.net/attachments/1202690868822417449/1205395293449883658/imagem.png?ex=65d836d9&is=65c5c1d9&hm=83f46665ceb9e5fbcc367661b5f9cd83379ae8c37a34fc81f29681cde270ea4b&=&format=webp&quality=lossless">
     <meta property="og:description" content="Sean Journey  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="SeanPalia ">
-    <meta name="twitter:title" content="SeanPalia ">
+    <meta name="twitter:site" content="SeanJourney ">
+    <meta name="twitter:title" content="SeanJourney ">
     <meta name="twitter:type" content="website">
     <meta name="twitter:image" content="assets/img/twitter-image.png">
     <meta name="twitter:description" content="Sean Journey  is an immersive action RPG with base building elements, which will test your survival and exploration skills in a fantasy open world, sprawling on islands floating in the sky.">
@@ -73,7 +73,7 @@
                                 <div class="slider__content">
                                     <h6 class="sub-title wow fadeInUp" data-wow-delay=".2s">Welcome to</h6>
                                     <h2 class="title wow fadeInUp" data-wow-delay=".5s">
-                                        SeanPalia 
+                                        SeanJourney 
                                     </h2>
                                     <p class="fadeInUp" data-wow-delay=".8s">
                                         Sean Journey combines side-scrolling combat with base-building strategy in a beautiful pixel-art Viking Age world. You play as Thorald Olavson, a warrior hell-bent on tracking down the Jarl who burned down his home, stole his beloved, and fled to distant England.
@@ -316,7 +316,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright © 2024 - All Rights Reserved By <span>SeanPalia , Inc.</span></p>
+                            <p>Copyright © 2024 - All Rights Reserved By <span>SeanJourney , Inc.</span></p>
                         </div>
                     </div>
                     <div class="col-md-5">
