--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         Create and upgrade a variety of buildings to generate resources, provide storage, or offer enhanced training or capabilities for your warriors. Elevate your burgeoning villages into powerful strongholds that provide well-armed troops and mighty siege engines.
 
                                 </p>
-                                <img src="https://media.discordapp.net/attachments/1221830041240076400/1230978286184829033/sons-of-valhalla-1.png?ex=6624255d&is=6622d3dd&hm=3606e913db7a7e358d710f315b7115f106d6f9a1f4036ab9dadc4b43937f840d&=&format=webp&quality=lossless&width=1094&height=615" alt="img" style="border-radius: 12px;">
+                                <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_5c93c8e5a61b87ec920c2ff9060bdcd832f20dc4.600x338.jpg?t=1718284160" style="border-radius: 12px;">
                             </div>
                         </div>
                     </div>
