--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     <p class="text-lowercase" style="font-size: 14px;">
                                         Once your stronghold is operational and your warriors are ready for battle, it’s time for conquest. Lead your men in tactical combat by issuing orders and utilizing special abilities and formations. But remember: a true warrior leads from the front, so be prepared to take up your sword to fight alongside your men.
                                 </p>
-                                <img src="https://media.discordapp.net/attachments/520785467470512129/1230632295006998608/2xx.webp?ex=663406a3&amp;is=662191a3&amp;hm=d9e3d274d0e01b1dcd0d4129a0ac160315d2dc0549e1dbff39a0cca7d8a11331&amp;=&amp;format=webp" alt="img" style="border-radius: 12px;">
+                                <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_bfd2becf28d0ba08f289eee309da9f7d84a97c74.600x338.jpg?t=1718284160" alt="img" style="border-radius: 12px;">
                             </div>
                         </div>
                     </div>
