--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <p class="text-lowercase" style="font-size: 14px;">
                                         Sean Journey is the creation of two brothers with a passion for pixel art and the Viking Age. In-between the conquest and swordplay, we hope you will enjoy the little touches – the look of the buildings, the ducks swimming on water, and the general atmosphere as days turn to nights, sunshine to storms.
                                 </p>
-                                <img src="https://media.discordapp.net/attachments/1221830041240076400/1230978790834835456/sons-of-valhalla-release-date.png?ex=66354956&is=6622d456&hm=7304d3d998c46a46ed3caa47e678cee944e09cb2fc217c3a1f360e65bcc0faf1&=&format=webp&quality=lossless&width=1094&height=615" alt="img" style="border-radius: 12px;">
+                                <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_75bffcaa38fe6a3a90bba0d27b434c9c5b98b2be.600x338.jpg?t=1718284160"border-radius: 12px;">
                             </div>
                         </div>
                     </div>
