--- a/index.html
+++ b/index.html
@@ -172,28 +172,28 @@
                                         <div class="swiper-slide">
                                             <div class="gallery__item">
                                                 <div class="gallery__thumb">
-                                                    <img src="https://media.discordapp.net/attachments/520785467470512129/1230633262666219531/2X.webp?ex=66340789&amp;is=66219289&amp;hm=a473014c4486d9c5b6fa3c72e5504a6cf795d45ae0702c62e95399aa3674e7ab&amp;=&amp;format=webp" alt="img">
+                                                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_db8e0182a38eed96f2fe36a80dc6a9da866509f3.600x338.jpg?t=1718284160" alt="img">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="gallery__item">
                                                 <div class="gallery__thumb">
-                                                    <img src="https://media.discordapp.net/attachments/520785467470512129/1230633263018676244/2.webp?ex=66340789&amp;is=66219289&amp;hm=34c640fafa1c3497967073a177c55ba8d676cec08b710dd5414cebc4cd048472&amp;=&amp;format=webp" alt="img">
+                                                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_a8dedc06678712f60bc941b4ccb07047cd68e9b3.1920x1080.jpg?t=1718284160" alt="img">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="gallery__item">
                                                 <div class="gallery__thumb">
-                                                    <img src="https://media.discordapp.net/attachments/520785467470512129/1230633263446622339/4.webp?ex=6634078a&amp;is=6621928a&amp;hm=7f25be22d7700148bcd5aabf3e9e788c72ba19da9bf08df23fae4348ccc6c739&amp;=&amp;format=webp" alt="img">
+                                                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_8ba6c02252ce32019e3036ff34b509f115e19d06.1920x1080.jpg?t=1718284160" alt="img">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="gallery__item">
                                                 <div class="gallery__thumb">
-                                                    <img src="https://media.discordapp.net/attachments/520785467470512129/1230633264054534144/8.webp?ex=6634078a&amp;is=6621928a&amp;hm=996067517edd6bb62817dcf1f30d3c550987e173abe9d53ffcf11fb3f19328af&amp;=&amp;format=webp" alt="img">
+                                                    <img src="https://shared.akamai.steamstatic.com/store_item_assets/steam/apps/1409830/ss_567bdafe94ee4d7b2bcf734a94ef9d67f2dde1f8.600x338.jpg?t=1718284160" alt="img">
                                                 </div>
                                             </div>
                                         </div>
