--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <img src="images/team04.jpg" alt="img">
                             </div>
                             <div class="team__content">
-                                <h4 class="name">Sara</h4>
+                                <h4 class="name">Kim</h4>
                                 <span class="designation">Administrator</span>
                             </div>
                         </div>
