--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         Sean Journey combines side-scrolling combat with base-building strategy in a beautiful pixel-art Viking Age world. You play as Thorald Olavson, a warrior hell-bent on tracking down the Jarl who burned down his home, stole his beloved, and fled to distant England.
                                     </p>
                                     <div class="slider__btn wow fadeInUp" data-wow-delay="1.2s">
-                                        <a href="https://mega.nz/file/RFYjlYgQ#ORzScfJM4RlyWxWoTbjdoj6_g0zhyKY3SixuMbmzonI" class="tg-btn-1" target="_blank">
+                                        <a href="https://mega.nz/file/TYVUDb5I#W50EtIldoTIXC-EkyUQVUNImyZoHoO1PDNZ55a2TU9I" class="tg-btn-1" target="_blank">
                                             <span>Download Beta Launcher</span>
                                         </a>
                                     </div>                                
